H2: Remove exception throwing P4/5/6
Remove throws Exception from Problems 4, 5, and 6.

Re-test output and update output comments.